--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html lang="en">
 	<head>
-		<title>Crispy - One Page Site Template</title>
+		<title>MyBoard</title>
 		<meta charset="UTF-8" />
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"> <!-- Remove this For Non-responsive -->
@@ -40,25 +40,12 @@
 						<div class="agni_slide_bg_overlay"></div> <!-- overlay black layer -->
 						<div class="slide-content">
 							<div class="agni_slide-text container text-center">
-								<h1>Crispy</h1> <!-- Slide 1 text -->
-								<p>One Page Responsive Site Template & WordPress Theme</p>
+								<h1>MyBoard</h1> <!-- Slide 1 text -->
+								<p>A dashboard for your life</p>
 							</div>
 						</div>
 					</div>		
-				</div>  
-				<div id="post-2" class="slide">
-					<div class="agni_slide agni_slide-bg-2 parallax"> <!-- Slide 2 bg -->
-						<div class="agni_slide_bg_overlay"></div> <!-- overlay black layer -->
-						<div class="slide-content">
-							<div class="agni_slide-text container slide-text text-center ">
-								<h1>1ly 4 U</h1> <!-- Slide 2 text -->
-								<p>Sed posuere consectetur est at lobortis. Maecenas eget risus varius blandit sit amet non magna.<br/>Responsive Site Template & WordPress Theme</p>
-								<a class="btn btn-white" href="#">I Love This</a>
-								<a class="btn btn-primary" href="#">Buy Now</a>
-							</div>
-						</div>
-					</div>		
-				</div>        
+				</div>          
 			</div>
 			<div class="Slides-nav-control">
 				<nav class="slides-navigation">
@@ -86,11 +73,6 @@
                 <nav class="nav-menu page-scroll" >
 					<ul class="nav-menu-content">
 						<li><a href="#about">ABOUT</a></li>
-						<li><a href="#works">WORKS</a></li>
-						<li><a href="#services">SERVICES</a></li>
-						<li><a href="#team">TEAM</a></li>
-						<li><a href="#blog">BLOG</a></li>
-						<li><a href="#contact">CONTACT</a></li>
 						<li class="menu-item-has-children"><a href="#">FEATURES</a>
 							<ul class="sub-menu">
 								<li class="menu-item-has-children"><a href="#">HEADERS</a>
@@ -138,6 +120,7 @@
 								</li>
 								<li><a href="shortcodes.html">SHORTCODES</a></li>
 							</ul>
+						<li><a href="#contact">CONTACT</a></li>
 						</li>
 					</ul>
                 </nav>	
