--- a/lockscreen.html
+++ b/lockscreen.html
@@ -8,6 +8,9 @@
     <meta content="" name="description" />
     <meta content="" name="author" />
     <!-- BEGIN PLUGIN CSS -->
+    <link href="assets/plugins/font-awesome/css/font-awesome.css" rel="stylesheet" type="text/css" />
+    <!-- END PLUGIN CSS -->
+    <!-- BEGIN PLUGIN CSS -->
     <link href="assets/plugins/pace/pace-theme-flash.css" rel="stylesheet" type="text/css" media="screen" />
     <link href="assets/plugins/bootstrapv3/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
     <link href="assets/plugins/bootstrapv3/css/bootstrap-theme.min.css" rel="stylesheet" type="text/css" />
@@ -22,51 +25,22 @@
   <!-- END HEAD -->
   <!-- BEGIN BODY -->
   <body class="error-body no-top">
-    <div class="error-wrapper container">
-      <div class="row">
-        <div class="col-md-4 col-md-offset-4 col-sm-6 col-sm-offset-3 col-xs-offset-1 col-xs-10">
-          <div class="error-container">
-            <div class="error-main">
-              <div class="error-number"> 404 </div>
-              <div class="error-description"> We seem to have lost you in the clouds. </div>
-              <div class="error-description-mini"> The page your looking for is not here </div>
-              <br>
-              <div class="row">
-                <div class="input-with-icon col-md-12"> <i class="fa fa-search"></i>
-                  <input type="text" class="form-control" id="form1Name" name="form1Name">
-                </div>
-              </div>
-              <br>
-              <button class="btn btn-primary btn-cons" type="button">Search</button>
+    <div class="container">
+      <div class="lockscreen-wrapper animated  flipInX">
+        <div class="row ">
+          <div class="col-md-8 col-md-offset-4 col-sm-6 col-sm-offset-4 col-xs-offset-2">
+            <div class="profile-wrapper">
+              <img width="69" height="69" data-src-retina="assets/img/profiles/avatar2x.jpg" data-src="assets/img/profiles/avatar.jpg" src="assets/img/profiles/avatar.jpg" alt="">
             </div>
+            <form class="user-form" action="index.html" method="post">
+              <h2 class="user">John <span class="semi-bold">Smith</span></h2>
+              <input type="password" placeholder="Password">
+              <button type="submit" class="btn btn-primary "><i class="fa fa-unlock"></i></button>
+            </form>
           </div>
         </div>
       </div>
-    </div>
-    <div id="footer">
-      <div class="error-container">
-        <ul class="footer-links">
-          <li><a href="#">Template Guidelines</a></li>
-          <li><a href="#">Copyrights & Privacy </a></li>
-          <li><a href="#">Help & FAQ</a></li>
-          <li><a href="#">Contact Us</a></li>
-          <li><a href="#">Reports</a></li>
-          <li><a href="#">Search</a></li>
-          <li><a href="#">Buy theme</a></li>
-        </ul>
-        <br>
-        <ul class="footer-links small-links">
-          <li><a href="#">Home</a></li>
-          <li><a href="#">About Us </a></li>
-          <li><a href="#">UI Elements</a></li>
-          <li><a href="#">Charts</a></li>
-          <li><a href="#">Mobile Apps</a></li>
-          <li><a href="#">Responsive Design</a></li>
-          <li><a href="#">Design</a></li>
-        </ul>
-        <br>
-        <div class="copyright"> All work copyright of respective owner, 2013 webarch Incorporated </div>
-      </div>
+      <div id="push"></div>
     </div>
     <!-- END CONTAINER -->
     <script src="assets/plugins/pace/pace.min.js" type="text/javascript"></script>
