--- a/login.html
+++ b/login.html
@@ -22,50 +22,53 @@
   <!-- END HEAD -->
   <!-- BEGIN BODY -->
   <body class="error-body no-top">
-    <div class="error-wrapper container">
-      <div class="row">
-        <div class="col-md-4 col-md-offset-4 col-sm-6 col-sm-offset-3 col-xs-offset-1 col-xs-10">
-          <div class="error-container">
-            <div class="error-main">
-              <div class="error-number"> 404 </div>
-              <div class="error-description"> We seem to have lost you in the clouds. </div>
-              <div class="error-description-mini"> The page your looking for is not here </div>
-              <br>
-              <div class="row">
-                <div class="input-with-icon col-md-12"> <i class="fa fa-search"></i>
-                  <input type="text" class="form-control" id="form1Name" name="form1Name">
+    <div class="container">
+      <div class="row login-container column-seperation">
+        <div class="col-md-5 col-md-offset-1">
+          <h2>
+        Sign in to webarch
+      </h2>
+          <p>
+            Use Facebook, Twitter or your email to sign in.
+            <br>
+            <a href="#">Sign up Now!</a> for a webarch account,It's free and always will be..
+          </p>
+          <br>
+          <button class="btn btn-block btn-info col-md-8" type="button"><span class="pull-left icon-facebook" style="font-style: italic"></span> <span class="bold">Login with Facebook</span></button>
+          <button class="btn btn-block btn-success col-md-8" type="button"><span class="pull-left icon-twitter" style="font-style: italic"></span>
+            <span class="bold">Login with Twitter</span></button>
+        </div>
+        <div class="col-md-5">
+          <br>
+          <form action="index.html" class="login-form validate" id="login-form" method="post" name="login-form">
+            <div class="row">
+              <div class="form-group col-md-10">
+                <label class="form-label">Username</label>
+                <input class="form-control" id="txtusername" name="txtusername" type="email" required>
+              </div>
+            </div>
+            <div class="row">
+              <div class="form-group col-md-10">
+                <label class="form-label">Password</label> <span class="help"></span>
+                <input class="form-control" id="txtpassword" name="txtpassword" type="password" required>
+              </div>
+            </div>
+            <div class="row">
+              <div class="control-group col-md-10">
+                <div class="checkbox checkbox check-success">
+                  <a href="#">Trouble login in?</a>&nbsp;&nbsp;
+                  <input id="checkbox1" type="checkbox" value="1">
+                  <label for="checkbox1">Keep me reminded</label>
                 </div>
               </div>
-              <br>
-              <button class="btn btn-primary btn-cons" type="button">Search</button>
             </div>
-          </div>
+            <div class="row">
+              <div class="col-md-10">
+                <button class="btn btn-primary btn-cons pull-right" type="submit">Login</button>
+              </div>
+            </div>
+          </form>
         </div>
-      </div>
-    </div>
-    <div id="footer">
-      <div class="error-container">
-        <ul class="footer-links">
-          <li><a href="#">Template Guidelines</a></li>
-          <li><a href="#">Copyrights & Privacy </a></li>
-          <li><a href="#">Help & FAQ</a></li>
-          <li><a href="#">Contact Us</a></li>
-          <li><a href="#">Reports</a></li>
-          <li><a href="#">Search</a></li>
-          <li><a href="#">Buy theme</a></li>
-        </ul>
-        <br>
-        <ul class="footer-links small-links">
-          <li><a href="#">Home</a></li>
-          <li><a href="#">About Us </a></li>
-          <li><a href="#">UI Elements</a></li>
-          <li><a href="#">Charts</a></li>
-          <li><a href="#">Mobile Apps</a></li>
-          <li><a href="#">Responsive Design</a></li>
-          <li><a href="#">Design</a></li>
-        </ul>
-        <br>
-        <div class="copyright"> All work copyright of respective owner, 2013 webarch Incorporated </div>
       </div>
     </div>
     <!-- END CONTAINER -->
